--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -7,12 +7,12 @@ on:
       - main
       - dev
 jobs:
-    PyTest:
-      name: pytest
+    pr_workflow:
+      name: pr_workflow
       runs-on: ubuntu-latest
       strategy:
         matrix:
-          python-version: ["3.10"]
+          python-version: ["3.12"]
       steps:
         - run: echo "Running ${{ github.job }} in branch ${{ github.ref_name }}"
         - name: Checkout
@@ -30,6 +30,7 @@ jobs:
         - name: Lint with PyLint
           run: |
             poetry run pylint \
+            --disable='C0301, R0903, R0801' \
             --source-roots=./src \
             --output-format=colorized \
             --msg-template='Rule: {msg_id} - Position: [{line},{column}] -  {msg}' \
