--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ readme = "README.md"
 python = "^3.12"
 
 
+[tool.poetry.group.dev.dependencies]
+pandas = "^2.2.2"
+matplotlib = "^3.9.0"
+numpy = "^1.26.4"
+seaborn = "^0.13.2"
+jupyterlab = "^4.2.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
