--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pytest = "^8.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -15,6 +16,7 @@ matplotlib = "^3.9.0"
 numpy = "^1.26.4"
 seaborn = "^0.13.2"
 jupyterlab = "^4.2.1"
+colorama = "^0.4.6"
 
 [build-system]
 requires = ["poetry-core"]
