--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pytest = "^8.2.1"
+pytest = "8.2.0"
+pylint = "^3.2.2"
+pylint-pytest = "^1.1.8"
 
 
 [tool.poetry.group.dev.dependencies]
