--- a/src/logging_module/log_configuration.yaml
+++ b/src/logging_module/log_configuration.yaml
@@ -14,3 +14,19 @@ loggers:
     level: INFO
     handlers: [ console ]
     propagate: no
+  CustomerChurnDataPreparation:
+    level: INFO
+    handlers: [ console ]
+    propagate: no
+  data_preparation_utils:
+    level: INFO
+    handlers: [ console ]
+    propagate: no
+  ModelTrainer:
+    level: INFO
+    handlers: [ console ]
+    propagate: no
+  model_training_utils:
+    level: INFO
+    handlers: [ console ]
+    propagate: no
