--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ pytest = "8.2.0"
 pylint = "^3.2.2"
 pylint-pytest = "^1.1.8"
 scikit-learn = "^1.5.0"
+torch = "2.2.0"
+transformers = "^4.41.1"
+mlflow = "^2.13.0"
 
 
 [tool.poetry.group.dev.dependencies]
