--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ scikit-learn = "^1.5.0"
 torch = "2.2.0"
 transformers = "^4.41.1"
 mlflow = "^2.13.0"
+statsmodels = "^0.14.2"
+xgboost = "^2.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
