--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ transformers = "^4.41.1"
 mlflow = "^2.13.0"
 statsmodels = "^0.14.2"
 xgboost = "^2.0.3"
+fastapi = "^0.111.0"
 
 
 [tool.poetry.group.dev.dependencies]
