--- a/src/logging_module/log_configuration.yaml
+++ b/src/logging_module/log_configuration.yaml
@@ -30,3 +30,7 @@ loggers:
     level: INFO
     handlers: [ console ]
     propagate: no
+  churn_predictor_rest_api:
+    level: INFO
+    handlers: [ console ]
+    propagate: no
