--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ mlflow = "^2.13.0"
 statsmodels = "^0.14.2"
 xgboost = "^2.0.3"
 fastapi = "^0.111.0"
+transformers = "^4.41.1"
+torch = "2.2.0"
+ipywidgets = "^8.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
